--- a/index.html
+++ b/index.html
@@ -8,21 +8,62 @@
   <body>
     <script>
 
-      $(document).ready(function(){
+      /******************************************************
+       * This is a mostly-empty repo, with a file that creates some data that
+       * represents twitter users and their tweets. It's the data you would expect
+       * to see if you had created a twitter account and followed a few people.
+       * (More tweets appear over time.)
+
+       That file is called data_generator.js. You don't need to understand the code
+       that's in it, but here's what it does:
+
+       Creates two global variables, users and streams.
+       users is an array of strings -- all the usernames that you're following.
+       streams is an object with two properties, users and home.
+       streams.home is an array of all tweets from all the users you're following.
+       streams.users is an object with properties for each user. streams.users.shawndrost
+       has all of shawndrost's tweets.
+       Kicks off a periodic process that puts more data in streams.
+       You'll mostly be working in the javascript block of index.html.
+       Note: The generated tweets will be displayed in reverse chronological order.
+
+       Basic Requirements:
+
+       1. Show the user new tweets somehow. (You can show them automatically as they're
+            created, or create a button that displays new tweets.)
+       2. Display the timestamps of when the tweets were created.
+       3. Design your interface so that you want to look at and use the product you're making.
+       4. Allow the user to click on a username to see that user's timeline.
+       *****************************************************************/
+
+      var update=function(){
         var $body = $('body');
         $body.html('');
 
         var index = streams.home.length - 1;
         while(index >= 0){
           var tweet = streams.home[index];
+          var timeStamp = tweet.created_at;
+
           var $tweet = $('<div></div>');
-          $tweet.text('@' + tweet.user + ': ' + tweet.message);
-          $tweet.appendTo($body);
+          var $timeStamp = $('<div ID="timestamp"></div>');
+
+          $tweet.text('@' + tweet.user + ': ' + tweet.message);// + " - " + tweet.created_at);
+          $timeStamp.text(" - " + timeStamp);
+
+          $tweet.prependTo($body);
+          $timeStamp.prependTo($body);
+          $('<br></br>').prependTo($body);
+
           index -= 1;
         }
+        var $button = $('<button class="mybutton" onclick="update()">Moar Twits</button>')
+        $button.appendTo($body);
+      }
 
-      });
+      $(document).ready(update());
 
     </script>
+    <!--<button class="mybutton" onclick="update()">Refresh</button>-->
   </body>
 </html>
